tests/cases/standard-library/ok/prelude/prelude-builtins.ari
fn main() -> i64 {
  assert(true);
  debug_assert(1 < 2);
  assert_eq_i64(3, 3);
  assert_ne_i64(3, 4);
  assert_eq_bool(true, true);
  assert_ne_bool(true, false);
  assert_equal(5, 5);
  assert_not_equal(5, 6);
  assert_equal(true, true);
  assert_not_equal(false, true);
  assert_equal('a', 'a');
  assert_not_equal('a', 'b');
  return 7;
}
