tests/cases/standard-library/errors/prelude/prelude-path-without-std.ari
fn main() -> i64 {
  io::write_i64(1);
  return 0;
}
